--- a/public_html/CSS/style.css
+++ b/public_html/CSS/style.css
@@ -166,8 +166,19 @@ a:hover
 }
 /*==============================================================*/
 #MainMenu {
-
 	display: inline;
+}
+
+#MainInstruction{
+	display: none;
+}
+
+#MainOptions{
+	display: none;
+}
+
+#MainLoad{
+	display: none;
 }
 
 #MainGame {
@@ -181,9 +192,8 @@ a:hover
 }
 
 
-button.start,button.load,button.options,button.save{
+button.start, button.load, button.options, button.instruction{
 	width: 100%;
-	height: 53px;
 	box-shadow: rgb(28, 27, 24) 0px 1px 0px 0px; 
 	background: linear-gradient(rgb(234, 224, 194) 5%, rgb(204, 194, 166) 100%) rgb(234, 224, 194); 
 	border-radius: 10px; 
@@ -201,12 +211,12 @@ button.start,button.load,button.options,button.save{
 
 .dead {
 	background-color: #993300;
-	width: 5px;
-	height: 5px;
+	width: 15px;
+	height: 15px;
 }
 
 .live{
 	background-color: #bbdaf7;
-	width: 5px;
-	height: 5px;
+	width: 15px;
+	height: 15px;
 }
