--- a/Gra-W-Zycie-master/public_html/CSS/style.css
+++ b/Gra-W-Zycie-master/public_html/CSS/style.css
@@ -1,13 +1,12 @@
 body {
 	background-color: #333;
-	    padding: 0;
+	padding: 0;
     margin: 0;
 }
 
-
 #FooterOptions {
 	position: fixed;
-    height: 90px;
+    height: auto;
     width: 100%;
     background: #993300;
     bottom: 0;
@@ -23,9 +22,9 @@ body {
 	cursor:pointer;
 	color:#ffffff;
 	font-family:Arial;
-	font-size:15px;
+	font-size:14px;
 	font-weight:bold;
-	padding: 6px 10px;
+	padding: 6px 8px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #528ecc;
 }
