--- a/public_html/CSS/style.css
+++ b/public_html/CSS/style.css
@@ -13,7 +13,7 @@ body {
     bottom: 0;
 }
 
-#FooterOptions button{
+#FooterOptions button {
 	box-shadow:inset 0px 1px 0px 0px #bbdaf7;
 	background:linear-gradient(to bottom, #79bbff 5%, #378de5 100%);
 	background-color:#79bbff;
@@ -23,9 +23,9 @@ body {
 	cursor:pointer;
 	color:#ffffff;
 	font-family:Arial;
-	font-size:15px;
+	font-size:14px;
 	font-weight:bold;
-	padding: 6px 10px;
+	padding: 6px 8px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #528ecc;
 }
@@ -145,6 +145,24 @@ button.loadMenu, button.saveMenu, button.optionsMenu{
 	text-shadow: rgb(255, 255, 255) 0px 1px 0px;
 }
 
+@media only screen and (max-width: 1920px){
+	button.loadMenu,button.saveMenu,button.optionsMenu{
+		width: 10%;
+	}
+}
+
+@media only screen and (max-width: 720px){
+	button.loadMenu,button.saveMenu,button.optionsMenu{
+		width: 40%;
+	}
+}
+
+@media only screen and (max-width: 320px){
+	button.loadMenu,button.saveMenu,button.optionsMenu{
+		width: 90%;
+	}
+}
+
 #menuToggle{
 	padding-top: 8px;
 	padding-bottom: 8px;
@@ -164,6 +182,20 @@ text-transform: uppercase;
 text-shadow: 2px 2px 11px #000000;
 }
 
+#MainInstruction{
+font-family: "Arial Black", Gadget, sans-serif;
+font-size: 15px;
+letter-spacing: -0.6px;
+word-spacing: -0.2px;
+color: #CDD1D1;
+font-weight: 700;
+text-align: center;
+text-decoration: none solid rgb(68, 68, 68);
+font-style: normal;
+font-variant: normal;
+text-transform: none;
+}
+
 .dead {
 	background-color: #993300;
 	width: 15px;
@@ -174,8 +206,4 @@ text-shadow: 2px 2px 11px #000000;
 	background-color: #bbdaf7;
 	width: 15px;
 	height: 15px;
-}
-
-#OneMove {
-	background-color: #000000;
 }
