--- a/public_html/CSS/style.css
+++ b/public_html/CSS/style.css
@@ -149,17 +149,26 @@ button.loadMenu, button.saveMenu, button.optionsMenu{
 	button.loadMenu,button.saveMenu,button.optionsMenu{
 		width: 10%;
 	}
+	.MainInstruction{
+		font-size: 20px;
+	}
 }
 
 @media only screen and (max-width: 720px){
 	button.loadMenu,button.saveMenu,button.optionsMenu{
 		width: 40%;
 	}
+	.MainInstruction{
+		font-size: 15px;
+	}
 }
 
 @media only screen and (max-width: 320px){
 	button.loadMenu,button.saveMenu,button.optionsMenu{
 		width: 90%;
+	}
+	.MainInstruction{
+		font-size: 12px;
 	}
 }
 
@@ -184,7 +193,7 @@ text-shadow: 2px 2px 11px #000000;
 
 #MainInstruction{
 font-family: "Arial Black", Gadget, sans-serif;
-font-size: 15px;
+
 letter-spacing: -0.6px;
 word-spacing: -0.2px;
 color: #CDD1D1;
