--- a/public_html/CSS/style.css
+++ b/public_html/CSS/style.css
@@ -7,7 +7,7 @@ body {
 
 #FooterOptions {
 	position: fixed;
-    height: 90px;
+    height: auto;
     width: 100%;
     background: #993300;
     bottom: 0;
@@ -23,9 +23,9 @@ body {
 	cursor:pointer;
 	color:#ffffff;
 	font-family:Arial;
-	font-size:15px;
+	font-size:14px;
 	font-weight:bold;
-	padding: 6px 10px;
+	padding: 6px 8px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #528ecc;
 }
@@ -65,81 +65,6 @@ a:hover
   user-select: none;
 }
 
-#menuToggle input
-{
-  display: block;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  top: -7px;
-  left: -5px;
-  cursor: pointer;
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
-  -webkit-touch-callout: none;
-}
-
-/*
- * Just a quick hamburger
- */
-#menuToggle span
-{
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
-  background: #cdcdcd;
-  border-radius: 3px;
-  z-index: 1;
-  transform-origin: 4px 0px;
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              opacity 0.55s ease;
-}
-
-#menuToggle span:first-child
-{
-  transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2)
-{
-  transform-origin: 0% 100%;
-}
-
-/* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-#menuToggle input:checked ~ span
-{
-  opacity: 1;
-  transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
-}
-
-/*
- * But let's hide the middle one.
- */
-#menuToggle input:checked ~ span:nth-last-child(3)
-{
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-/*
- * Ohyeah and the last one should go the other direction
- */
-#menuToggle input:checked ~ span:nth-last-child(2)
-{
-  transform: rotate(-45deg) translate(0, -1px);
-}
-
-/*
- * Make this absolute positioned
- * at the top left of the screen
- */
 #menu
 {
 	border-top-right-radius: 40px ;
@@ -156,20 +81,11 @@ a:hover
 	transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
-#menu li
+#optionsSpan
 {
-  padding: 10px 0;
-  font-size: 22px;
+	cursor: pointer;
 }
 
-/*
- * And let's slide it in from the left
- */
-#menuToggle input:checked ~ ul
-{
-  transform: none;
-}
-/*==============================================================*/
 #MainMenu {
 	display: inline;
 }
@@ -197,7 +113,7 @@ a:hover
 }
 
 
-button.start, button.load, button.options, button.instruction{
+button.start, button.load, button.instruction{
 	width: 100%;
 	box-shadow: rgb(28, 27, 24) 0px 1px 0px 0px; 
 	background: linear-gradient(rgb(234, 224, 194) 5%, rgb(204, 194, 166) 100%) rgb(234, 224, 194); 
@@ -211,6 +127,82 @@ button.start, button.load, button.options, button.instruction{
 	font-weight: bold; 
 	text-decoration: none; 
 	text-shadow: rgb(255, 255, 255) 0px 1px 0px;
+}
+
+button.loadMenu, button.saveMenu, button.optionsMenu{
+	width: 25%;
+	box-shadow: rgb(28, 27, 24) 0px 1px 0px 0px; 
+	background: linear-gradient(rgb(234, 224, 194) 5%, rgb(204, 194, 166) 100%) rgb(234, 224, 194); 
+	border-radius: 10px; 
+	border: 1px solid rgb(51, 48, 41); 
+	display: inline-block; 
+	cursor: pointer; 
+	color: rgb(80, 87, 57); 
+	font-family: Arial; 
+	font-size: 18px; 
+	font-weight: bold; 
+	text-decoration: none; 
+	text-shadow: rgb(255, 255, 255) 0px 1px 0px;
+}
+
+@media only screen and (max-width: 1920px){
+	button.loadMenu,button.saveMenu,button.optionsMenu{
+		width: 10%;
+	}
+	.MainInstruction{
+		font-size: 20px;
+	}
+}
+
+@media only screen and (max-width: 720px){
+	button.loadMenu,button.saveMenu,button.optionsMenu{
+		width: 40%;
+	}
+	.MainInstruction{
+		font-size: 15px;
+	}
+}
+
+@media only screen and (max-width: 320px){
+	button.loadMenu,button.saveMenu,button.optionsMenu{
+		width: 90%;
+	}
+	.MainInstruction{
+		font-size: 12px;
+	}
+}
+
+#menuToggle{
+	padding-top: 8px;
+	padding-bottom: 8px;
+}
+
+#optionsSpan{
+font-family: "Arial Black", Gadget, sans-serif;
+font-size: 150%;
+letter-spacing: 1px;
+word-spacing: -5px;
+color: #BCBCBC;
+font-weight: bold;
+text-decoration: underline solid #BCBCBC;
+font-style: normal;
+font-variant: small-caps;
+text-transform: uppercase;
+text-shadow: 2px 2px 11px #000000;
+}
+
+#MainInstruction{
+font-family: "Arial Black", Gadget, sans-serif;
+
+letter-spacing: -0.6px;
+word-spacing: -0.2px;
+color: #CDD1D1;
+font-weight: 700;
+text-align: center;
+text-decoration: none solid rgb(68, 68, 68);
+font-style: normal;
+font-variant: normal;
+text-transform: none;
 }
 
 .dead {
