--- a/public_html/CSS/style.css
+++ b/public_html/CSS/style.css
@@ -1,20 +1,58 @@
 body {
 	background-color: #333;
-	    padding: 0;
+	padding: 0;
     margin: 0;
 }
 
 
 #FooterOptions {
 	position: fixed;
-    height: 90px;
+    height: auto;
     width: 100%;
     background: #993300;
     bottom: 0;
 }
 
-#FooterOptions button {
-	box-shadow:inset 0px 1px 0px 0px #bbdaf7;
+#Label{
+	text-align: right;
+    font-size: 14px;
+    font-family: FreeMono, monospace;
+    width: 52px;
+    display: inline-block;
+}
+
+.slider1,
+.slider2 {
+    -webkit-appearance: none;
+    background: #d3d3d3;
+    height: 10px;
+}
+
+.slider1:hover,
+.slider2:hover {
+    opacity: 1;
+}
+
+.slider1::-webkit-slider-thumb,
+.slider2::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 10px;
+    background: linear-gradient(to bottom, #79bbff 5%, #378de5 100%);
+    cursor: pointer;
+}
+
+.slider1::-moz-range-thumb,
+.slider2::-moz-range-thumb{
+    width: 15px;
+    height: 10px;
+    background: linear-gradient(to bottom, #79bbff 5%, #378de5 100%);
+    cursor: pointer;
+    content: "";
+}
+
+#FooterOptions button,#FooterOptions select, #FooterOptions #bottomButtons input{
 	background:linear-gradient(to bottom, #79bbff 5%, #378de5 100%);
 	background-color:#79bbff;
 	border-radius:6px;
@@ -23,24 +61,32 @@ body {
 	cursor:pointer;
 	color:#ffffff;
 	font-family:Arial;
-	font-size:15px;
+	font-size:14px;
 	font-weight:bold;
-	padding: 6px 10px;
+	padding: 6px 8px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #528ecc;
+	margin: 0 0 3px 0;
 }
-#FooterOptions button:hover {
+#FooterOptions button:hover,#FooterOptions select:hover{
 	background:linear-gradient(to bottom, #378de5 5%, #79bbff 100%);
 	background-color:#378de5;
 }
-#FooterOptions button:active {
+#FooterOptions button:active, #FooterOptions  select:active {
 	position:relative;
 	top:1px;
 }
 
-/*==============================================================*/
-a
-{
+#bottomButtons{
+	text-align: center;
+}
+
+#FooterOptions .interval{
+	position: initial;
+    margin-bottom: 3px;
+    margin-left: 10px;
+}
+
+a{
   text-decoration: none;
   color: #232323;
   transition: color 0.3s ease;
@@ -60,81 +106,6 @@ a:hover
   user-select: none;
 }
 
-#menuToggle input
-{
-  display: block;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  top: -7px;
-  left: -5px;
-  cursor: pointer;
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
-  -webkit-touch-callout: none;
-}
-
-/*
- * Just a quick hamburger
- */
-#menuToggle span
-{
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
-  background: #cdcdcd;
-  border-radius: 3px;
-  z-index: 1;
-  transform-origin: 4px 0px;
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              opacity 0.55s ease;
-}
-
-#menuToggle span:first-child
-{
-  transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2)
-{
-  transform-origin: 0% 100%;
-}
-
-/* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-#menuToggle input:checked ~ span
-{
-  opacity: 1;
-  transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
-}
-
-/*
- * But let's hide the middle one.
- */
-#menuToggle input:checked ~ span:nth-last-child(3)
-{
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-/*
- * Ohyeah and the last one should go the other direction
- */
-#menuToggle input:checked ~ span:nth-last-child(2)
-{
-  transform: rotate(-45deg) translate(0, -1px);
-}
-
-/*
- * Make this absolute positioned
- * at the top left of the screen
- */
 #menu
 {
 	border-top-right-radius: 40px ;
@@ -151,20 +122,11 @@ a:hover
 	transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
-#menu li
+#optionsSpan
 {
-  padding: 10px 0;
-  font-size: 22px;
+	cursor: pointer;
 }
 
-/*
- * And let's slide it in from the left
- */
-#menuToggle input:checked ~ ul
-{
-  transform: none;
-}
-/*==============================================================*/
 #MainMenu {
 	display: inline;
 }
@@ -192,7 +154,7 @@ a:hover
 }
 
 
-button.start, button.load, button.options, button.instruction{
+button.start, button.load, button.instruction{
 	width: 100%;
 	box-shadow: rgb(28, 27, 24) 0px 1px 0px 0px; 
 	background: linear-gradient(rgb(234, 224, 194) 5%, rgb(204, 194, 166) 100%) rgb(234, 224, 194); 
@@ -205,8 +167,103 @@ button.start, button.load, button.options, button.instruction{
 	font-size: 15px; 
 	font-weight: bold; 
 	text-decoration: none; 
-	text-shadow: rgb(255, 255, 255) 0px 1px 0px;
-	
+}
+
+button.loadMenu, button.saveMenu, button.optionsMenu{
+	width: 25%;
+	box-shadow: rgb(28, 27, 24) 0px 1px 0px 0px; 
+	background: linear-gradient(rgb(234, 224, 194) 5%, rgb(204, 194, 166) 100%) rgb(234, 224, 194); 
+	border-radius: 10px; 
+	border: 1px solid rgb(51, 48, 41); 
+	display: inline-block; 
+	cursor: pointer; 
+	color: rgb(80, 87, 57); 
+	font-family: Arial; 
+	font-size: 18px; 
+	font-weight: bold; 
+	text-decoration: none; 
+}
+
+input[name="pliki"]{
+	text-align: center;
+	display: inline-block; 
+	color: rgb(80, 87, 57); 
+	font-family: Arial; 
+	font-size: 18px; 
+	font-weight: bold; 
+	text-decoration: none; 
+	background: linear-gradient(rgb(234, 224, 194) 5%, rgb(204, 194, 166) 100%) rgb(234, 224, 194); 
+	border-radius: 10px; 
+	border: 1px solid rgb(51, 48, 41); 
+}
+
+@media only screen and (max-width: 1920px){
+	input[name="pliki"] {
+		width: 35%;
+	  }
+	button.loadMenu,button.saveMenu,button.optionsMenu{
+		width: 35%;
+	}
+	.MainInstruction{
+		font-size: 20px;
+	}
+}
+
+@media only screen and (max-width: 720px){
+	input[name="pliki"] {
+		width: 65%;
+	  }
+	button.loadMenu,button.saveMenu,button.optionsMenu{
+		width: 65%;
+	}
+	.MainInstruction{
+		font-size: 15px;
+	}
+}
+
+@media only screen and (max-width: 320px){
+	input[name="pliki"] {
+		width: 90%;
+	  }
+	button.loadMenu,button.saveMenu,button.optionsMenu{
+		width: 90%;
+	}
+	.MainInstruction{
+		font-size: 12px;
+	}
+}
+
+#menuToggle{
+	padding-top: 8px;
+	padding-bottom: 8px;
+}
+
+#optionsSpan{
+font-family: "Arial Black", Gadget, sans-serif;
+font-size: 150%;
+letter-spacing: 1px;
+word-spacing: -5px;
+color: #BCBCBC;
+font-weight: bold;
+text-decoration: underline solid #BCBCBC;
+font-style: normal;
+font-variant: small-caps;
+text-transform: uppercase;
+text-shadow: 2px 2px 11px #000000;
+}
+
+#MainInstruction{
+font-family: "Arial Black", Gadget, sans-serif;
+
+letter-spacing: -0.6px;
+word-spacing: -0.2px;
+color: #CDD1D1;
+font-weight: 700;
+text-align: center;
+text-decoration: none solid rgb(68, 68, 68);
+font-style: normal;
+font-variant: normal;
+text-transform: none;
 }
 
 .dead {
